re PR c++/31411 (ICE in gimplify_expr with throw/special copy constructor with initializer with a deconstructor)

PR c++/31411
        * except.c (initialize_handler_parm): Put a CLEANUP_POINT_EXPR inside
        the MUST_NOT_THROW_EXPR.

From-SVN: r128100