gcc/testsuite/g++.dg/eh/catch5.C
@@ -1,0 +1,13 @@
+// PR c++/31411
+
+struct allocator{
+  ~allocator() throw();
+};
+struct string
+{
+  string(const string& str, const allocator& al = allocator());
+};
+int main() {
+  try {}
+  catch (string smess) {}
+}
